--- a/Dockerfile.SRO
+++ b/Dockerfile.SRO
@@ -1,4 +1,4 @@
-FROM registry.access.redhat.com/ubi8:latest
+FROM quay.io/centos/centos:8
 
 ENV PATH $PATH:/opt/dell/srvadmin/bin:/opt/dell/srvadmin/sbin
 ENV KVER=$KVER
